--- a/style.css
+++ b/style.css
@@ -1,7 +1,67 @@
 body{
     font-family: 'Noto Serif Bengali', serif;
     font-family: 'Poppins', sans-serif;
+    padding: 20px;
 }
-p{ 
+h1{
+    font-size: 40px;
+}
+
+.brand-color{
+    color: cornflowerblue;
+}
+.justify{
     text-align: justify;
+}
+.flex-container{
+    display: flex;
+    margin-bottom: 50px;
+    text-align: justify;
+}
+.half-width{
+    width: 50%;
+    padding: 2%;
+}
+.half-width img{
+    width: 60%;
+    border-radius: 5%;
+}
+.align-center{
+    text-align: center;
+}
+#banner1{
+    background-image: url(/images/banner1.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: 15%;
+}
+.link-button{
+    color: white;
+    font-weight: 700;
+    text-decoration: none;
+    background-image: linear-gradient(rgb(153, 59, 59), rgb(5, 197, 5));
+    padding: 10px 40px;
+    border-radius: 5px;
+}
+#box-1{
+    background-color: rgb(202, 178, 146);
+    margin: 1%;
+    border-radius: 5%;
+}
+#box-2{
+    background-color: rgb(88, 144, 196);
+    margin: 1%;
+    border-radius: 5%;
+}
+#box-3{
+    background-color: rgb(92, 161, 121);
+    margin: 1%;
+    border-radius: 5%;
+}
+footer{
+    text-align: center;
+    margin-top: 80px;
+}
+#footer-background{
+    background-color: black;
 }
