--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
     font-family: 'Noto Serif Bengali', serif;
     font-family: 'Poppins', sans-serif;
-    padding: 20px;
 }
 h1{
     font-size: 40px;
@@ -25,6 +24,7 @@ h1{
 .half-width img{
     width: 60%;
     border-radius: 5%;
+    padding: 1%;
 }
 .align-center{
     text-align: center;
